[package]
name = "jit_streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "jit_streamer"

[dependencies]
tokio = { version = "*", features = [ "full" ] }
futures = { version = "*" }

warp = { version = "*", features = [ "tls" ] }
bytes = { version = "*" }
reqwest = { version = "*", features = [ "blocking" ] }

serde = { version = "*", features = [ "derive" ] }
serde_json = { version = "*" }

dirs = { version = "*" }
rand = { version = "*" }
zip = { version = "*" }

log = { version = "*" }
env_logger = { version = "*" }
toml = { version = "*" }

rusty_libimobiledevice = { version = "*", path = "../rusty_libimobiledevice", features = [ "static", "vendored" ] }
plist_plus = { version = "*", path= "../plist_plus", features = [ "static", "vendored" ] }

[[bin]]
name = "pair"
path = "src/pair.rs"
