[package]
name = "jit_streamer"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "jit_streamer"

[dependencies]
tokio = { version = "*", features = ["full"] }
futures = { version = "*" }

warp = { version = "*", features = ["tls"] }
bytes = { version = "*" }
reqwest = { version = "*", features = ["blocking"] }
ip-in-subnet = { version = "*" }

serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
toml = { version = "*" }

dirs = { version = "*" }
rand = { version = "*" }
zip = { version = "*" }

log = { version = "*" }
env_logger = { version = "*" }

rusty_libimobiledevice = { version = "0.1.8", features = [
  "static",
  "vendored",
] }
plist_plus = { version = "*", features = ["static", "vendored"] }

[[bin]]
name = "pair"
path = "src/pair.rs"
